--- a/404.md
+++ b/404.md
@@ -1,6 +1,8 @@
 ---
 permalink: /404.html
 ---
-# This page does not exist. (404)
+# 404 Not Found
 
-Hmmm... it seems that you are lost! No worries, just go back to my [GitHub profile](https://github.com/lraj22).
+There's nothing at this location...
+
+You might be lost. How about going back to [my profile](https://github.com/lraj22)?
